[tool.poetry]
name = "bangumi-dev-env"
version = "0.1.0"
description = "Bangumi.tv development environment quick starter"
authors = ["JarvieK <kongjw1993@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
PyMySQL = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
